@@ -477,6 +477,104 @@ end
 
 describe AutoForme do
   before(:all) do
+    db_setup(:artists=>[[:name, :string], [:artist_id, :integer]], :albums=>[[:name, :string], [:artist_id, :integer, {:table=>:artists}]])
+    model_setup(:Artist=>[:artists, [[:one_to_many, :albums]]], :Album=>[:albums, [[:many_to_one, :artist]]])
+  end
+  after(:all) do
+    Object.send(:remove_const, :Album)
+    Object.send(:remove_const, :Artist)
+  end
+
+  it "should have basic many to one associations working" do
+    app_setup do
+      model Artist
+      model Album do
+        columns [:name, :artist]
+        eager_graph :artist
+        order :artist__name
+      end
+    end
+
+    visit("/Artist/new")
+    fill_in 'Name', :with=>'Artist1'
+    click_button 'Create'
+    fill_in 'Name', :with=>'Artist2'
+    click_button 'Create'
+
+    visit("/Album/new")
+    fill_in 'Name', :with=>'Album1'
+    click_button 'Create'
+
+    click_link 'Edit'
+    select 'Album1'
+    click_button 'Edit'
+    fill_in 'Name', :with=>'Album1b'
+    select 'Artist2'
+    click_button 'Update'
+
+    click_link 'Show'
+    select 'Album1'
+    click_button 'Show'
+    page.html.should =~ /Name.+Album1b/m
+    page.html.should =~ /Artist.+Artist2/m
+
+    click_link 'Search'
+    fill_in 'Name', :with=>'1b'
+    select 'Artist2'
+    click_button 'Search'
+    all('td').map{|s| s.text}.should == ["Album1b", "Artist2", "Show", "Edit", "Delete"]
+
+    click_link 'Album'
+    all('td').map{|s| s.text}.should == ["Album1b", "Artist2", "Show", "Edit", "Delete"]
+  end
+
+  it "should have basic many to one associations working" do
+    app_setup do
+      model Artist do
+        eager_graph :albums
+        order :albums__name
+      end
+      model Album do
+        columns [:name, :artist]
+      end
+    end
+
+    visit("/Artist/new")
+    fill_in 'Name', :with=>'Artist1'
+    click_button 'Create'
+    fill_in 'Name', :with=>'Artist2'
+    click_button 'Create'
+
+    visit("/Album/new")
+    fill_in 'Name', :with=>'Album1'
+    click_button 'Create'
+
+    click_link 'Edit'
+    select 'Album1'
+    click_button 'Edit'
+    fill_in 'Name', :with=>'Album1b'
+    select 'Artist2'
+    click_button 'Update'
+
+    click_link 'Show'
+    select 'Album1'
+    click_button 'Show'
+    page.html.should =~ /Name.+Album1b/m
+    page.html.should =~ /Artist.+Artist2/m
+
+    click_link 'Search'
+    fill_in 'Name', :with=>'1b'
+    select 'Artist2'
+    click_button 'Search'
+    all('td').map{|s| s.text}.should == ["Album1b", "Artist2", "Show", "Edit", "Delete"]
+
+    click_link 'Album'
+    all('td').map{|s| s.text}.should == ["Album1b", "Artist2", "Show", "Edit", "Delete"]
+  end
+end
+
+describe AutoForme do
+  before(:all) do
     db_setup(:artists=>[[:name, :string]], :albums=>[[:name, :string], [:artist_id, :integer, {:table=>:artists}]])
     model_setup(:Artist=>[:artists, [[:one_to_many, :albums]]], :Album=>[:albums, [[:many_to_one, :artist, {:conditions=>{:name=>'A'..'M'}, :order=>:name}]]])
   end
