@@ -1,3 +1,7 @@
+=== HEAD
+
+* Qualify associated foreign key columns when searching, fixing issues when eager_graph is used on the model (jeremyevans)
+
 === 0.5.3 (2014-01-02)
 
 * Fix searching by associated object that uses autocompleting (jeremyevans)
